# advent_code

./: README.md  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
aoc_15/solutions/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py
aoc_25/inputs/: day02.txt
aoc_25/solutions/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py
utils/: aoc_utils.py  create_day.py
