[project]
name = "adventcode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "rich>=14.2.0",
    "ruff>=0.14.6",
    "tqdm>=4.67.1",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true
pretty = true

disallow_untyped_defs = false
disallow_incomplete_defs = true
warn_unused_ignores = true
